<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.genomebridge.consent</groupId>
  <artifactId>consent-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Consent Management Services</name>

  <properties>
    <java.version>1.7</java.version>
    <jersey.version>2.5.1</jersey.version>
    <jackson.version>1.9.9</jackson.version>
    <lucene.version>4.9.0</lucene.version>
    <hsqldb.version>2.3.2</hsqldb.version>
    <liquibase.version>3.1.1</liquibase.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <modules>
    <module>consent-core</module>
    <module>consent-indexer</module>
    <module>consent-autocomplete</module>
  </modules>

  <build>
    <finalName>consent-services</finalName>

    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>2.3.2</version>
	<configuration>
	  <source>1.7</source>
	  <target>1.7</target>
	</configuration>
      </plugin>

      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-surefire-plugin</artifactId>
	<version>2.14</version>
	<configuration>
	  <excludes>
	    <exclude>**/*IntegrationTest.java</exclude>
	  </excludes>

	  <argLine>-Xmx2g -XX:MaxPermSize=256m -Dsun.net.http.allowRestrictedHeaders=true</argLine>
	</configuration>
	<executions>
	  <execution>
	    <id>integration-test</id>
	    <goals>
	      <goal>test</goal>
	    </goals>
	    <phase>integration-test</phase>
	    <configuration>
	      <excludes>
		<exclude>none</exclude>
	      </excludes>
	      <includes>
		<include>**/*IntegrationTest.java</include>
	      </includes>
	      <argLine>-Xmx2g -XX:MaxPermSize=256m -Dsun.net.http.allowRestrictedHeaders=true</argLine>
	      <forkCount>1</forkCount>
	      <threadCount>1</threadCount>
	    </configuration>
	  </execution>
	</executions>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>net.sourceforge.owlapi</groupId>
	<artifactId>owlapi-distribution</artifactId>
	<version>3.4.10</version>
      </dependency>

      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>1.14-SNAPSHOT</version>
      </dependency>

      <!-- ElasticSearch -->
      <dependency>
        <groupId>org.elasticsearch</groupId>
        <artifactId>elasticsearch</artifactId>
        <version>1.3.2</version>
      </dependency>

      <dependency>
        <groupId>org.apache.lucene</groupId>
        <artifactId>lucene-core</artifactId>
        <version>${lucene.version}</version>
      </dependency>

      <!-- Pellet -->
      <dependency>
	<groupId>com.github.ansell.pellet</groupId>
	<artifactId>pellet-core</artifactId>
	<version>2.3.3</version>
	<exclusions>
	  <exclusion>
	    <groupId>xerces</groupId>
	    <artifactId>xercesImpl</artifactId>
	  </exclusion>
	</exclusions>
      </dependency>

      <dependency>
	<groupId>xerces</groupId>
	<artifactId>xercesImpl</artifactId>
	<version>2.11.0</version>
      </dependency>
      
      <dependency>
	<groupId>com.github.ansell.pellet</groupId>
	<artifactId>pellet-owlapiv3</artifactId>
	<version>2.3.3</version>
      </dependency>

      <!-- Testing -->
      <dependency>
	<groupId>org.testng</groupId>
	<artifactId>testng</artifactId>
	<version>6.3.1</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.mockito</groupId>
	<artifactId>mockito-all</artifactId>
	<version>1.9.5</version>
	<scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
